# pcfg-experiments

./: .gitignore  .gitmodules  README.md  avgruns.py  plots.py
brown/: browntagger.py
pcfg-python/: pcfg.py
pcfg-rust/: Cargo.toml  experiments.bash
pcfg-rust/src/: defs.rs  extract.rs  featurestructures.rs  main.rs  parse.rs
pos-tagging/: sklearntagger.py  traintagger.py
